# Scouting-Data-Compression-Web

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: schema.json
scripts/: build-wasm.sh  encode.sh
src/: api.rs  lib.rs
src/common/: apriltag.rs  color_palette.rs  constants.rs  data_regions.rs  mod.rs  schema.rs
src/encoder/: color_encoder.rs  data_packer.rs  image_generator.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  utils.rs
