[workspace]
members = ["wasm"]
resolver = "2"

[package]
name = "scouting-data-compression"
version = "0.1.0"
edition = "2021"

[dependencies]
zstd = "0.13"
image = "0.24"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "encode"
path = "src/bin/encode.rs"

