[package]
name = "scouting-data-compression-wasm"
version = "0.1.2"
edition = "2021"
description = "FRC scouting data compression - encode CSV to AprilTag image (WASM)"
license = "MIT"
repository = "https://github.com/frc3322/Scouting-Data-Compression-Web"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
scouting-data-compression = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "z"
lto = true

